--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
   "prisma": {
     "schema": "db/schema.prisma"
   },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100
-  },
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "eslint --fix"
@@ -28,14 +24,17 @@
     "@blitzjs/next": "2.0.0-beta.3",
     "@blitzjs/rpc": "2.0.0-beta.3",
     "@prisma/client": "4.0.0",
+    "autoprefixer": "10.4.8",
     "blitz": "2.0.0-beta.3",
+    "final-form": "4.20.7",
     "next": "12.2.5",
+    "postcss": "8.4.16",
     "prisma": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "3.17.3",
-    "final-form": "4.20.7",
-    "react-final-form": "6.5.9"
+    "react-final-form": "6.5.9",
+    "tailwindcss": "3.1.8",
+    "zod": "3.17.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
@@ -48,6 +47,10 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.2.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "lint-staged": "12.1.7",
