--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@blitzjs/next": "2.0.0-beta.3",
     "@blitzjs/rpc": "2.0.0-beta.3",
     "@prisma/client": "4.0.0",
+    "@tanstack/react-table": "8.5.11",
     "autoprefixer": "10.4.8",
     "blitz": "2.0.0-beta.3",
     "final-form": "4.20.7",
