--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@blitzjs/rpc": "2.0.0-beta.3",
     "@prisma/client": "4.0.0",
     "@tanstack/react-table": "8.5.11",
+    "@vanilla-extract/css": "1.7.3",
+    "@vanilla-extract/next-plugin": "2.0.2",
     "autoprefixer": "10.4.8",
     "blitz": "2.0.0-beta.3",
     "final-form": "4.20.7",
@@ -34,7 +36,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "6.5.9",
-    "tailwindcss": "3.1.8",
     "zod": "3.17.3"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-tailwindcss": "^3.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
