--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
     "@testing-library/jest-dom": "5.16.3",
+    "@types/chance": "1.1.3",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.16",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.17",
     "@typescript-eslint/eslint-plugin": "5.30.5",
+    "chance": "1.1.8",
     "eslint": "7.32.0",
     "eslint-config-next": "12.2.0",
     "eslint-config-prettier": "8.5.0",
