--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,4 @@
 # SQLite is ready to go out of the box, but you can switch to Postgres
 # by first changing the provider from "sqlite" to "postgres" in the Prisma
 # schema file and by second swapping the DATABASE_URL below.
-DATABASE_URL="file:./db_test.sqlite"
-# DATABASE_URL=postgresql://jkcorrea@localhost:5432/honcho-blitz_test
+DATABASE_URL=postgresql://user@localhost:5432/honcho-blitz_test
