--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@blitzjs/auth": "2.0.0-beta.3",
     "@blitzjs/next": "2.0.0-beta.3",
     "@blitzjs/rpc": "2.0.0-beta.3",
-    "@prisma/client": "4.0.0",
+    "@prisma/client": "^4.2.1",
     "@tanstack/react-table": "8.5.11",
     "@vanilla-extract/css": "1.7.3",
     "@vanilla-extract/next-plugin": "2.0.2",
@@ -32,7 +32,7 @@
     "final-form": "4.20.7",
     "next": "12.2.5",
     "postcss": "8.4.16",
-    "prisma": "4.0.0",
+    "prisma": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "6.5.9",
